@@ -50,7 +50,7 @@ bool journal_write(const char *path, GQueue *queue)
 
 	handle = fopen(path, "wb");
 	if (!handle) {
-		g_warning("Failed to save %s: %s\n", path, strerror(errno));
+		g_warning("Failed to save %s: %s\n", path, g_strerror(errno));
 		return false;
 	}
 
@@ -147,7 +147,7 @@ void journal_read(const char *path, GQueue *queue)
 			   user might be starting mpdscribble for the
 			   first time */
 			g_warning("Failed to load %s: %s",
-				  path, strerror(errno));
+				  path, g_strerror(errno));
 		return;
 	}
 
